Updating racial disc file

--- a/racial_disc/sliderule_dsi_inferential_statistics_exercise_2.ipynb
+++ b/racial_disc/sliderule_dsi_inferential_statistics_exercise_2.ipynb
@@ -61,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.io.stata.read_stata('data/us_job_market_discrimination.dta')"
