Updates & Linear Regression Project

--- a/hospital_readmit/sliderule_dsi_inferential_statistics_exercise_3.ipynb
+++ b/hospital_readmit/sliderule_dsi_inferential_statistics_exercise_3.ipynb
@@ -571,7 +571,9 @@
     "# Plotting a scatterplot with regression line and R-squared value\n",
     "\n",
     "plot = sns.FacetGrid(clean_hospital_read_df, size=3)  \n",
-    "plot.map(sns.jointplot, 'Number of Discharges', 'Excess Readmission Ratio', kind=\"reg\", stat_func=r2)"
+    "plot.map(sns.jointplot, 'Number of Discharges', 'Excess Readmission Ratio', kind=\"reg\", stat_func=r2)\n",
+    "\n",
+    "grid = sns.jointplot('Number of Discharges', 'Excess Readmission Ratio', clean_hospital_read_df, kind=\"reg\")"
    ]
   },
   {
