--- a/logistic_regression/Mini_Project_Logistic_Regression.ipynb
+++ b/logistic_regression/Mini_Project_Logistic_Regression.ipynb
@@ -42,6 +42,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
@@ -409,7 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.model_selection import KFold\n",
@@ -613,7 +616,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# your turn\n",
@@ -784,6 +789,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
+    "collapsed": true,
     "hide": true
    },
    "outputs": [],
