New Capstone Data

--- a/capstone_project_zillow/Zillow_Data_Cleaning.ipynb
+++ b/capstone_project_zillow/Zillow_Data_Cleaning.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "[5 rows x 261 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -371,7 +371,7 @@
        "4        1007       79,076     85,802  12,962"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,6 +381,363 @@
     "hhi = pd.DataFrame.from_csv('data/Income_by_zip.csv', index_col=None)\n",
     "hhi.columns = ('RegionName', 'MedianIncome', 'MeanIncome', 'Pop')\n",
     "hhi.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>RegionID</th>\n",
+       "      <th>RegionName</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>Metro</th>\n",
+       "      <th>CountyName</th>\n",
+       "      <th>SizeRank</th>\n",
+       "      <th>1996-04</th>\n",
+       "      <th>1996-05</th>\n",
+       "      <th>1996-06</th>\n",
+       "      <th>...</th>\n",
+       "      <th>2016-11</th>\n",
+       "      <th>2016-12</th>\n",
+       "      <th>2017-01</th>\n",
+       "      <th>2017-02</th>\n",
+       "      <th>2017-03</th>\n",
+       "      <th>2017-04</th>\n",
+       "      <th>2017-05</th>\n",
+       "      <th>MedianIncome</th>\n",
+       "      <th>MeanIncome</th>\n",
+       "      <th>Pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>61639</td>\n",
+       "      <td>10025</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1147300</td>\n",
+       "      <td>1149800.0</td>\n",
+       "      <td>1132700</td>\n",
+       "      <td>1121400</td>\n",
+       "      <td>1123000</td>\n",
+       "      <td>1143700</td>\n",
+       "      <td>1178700</td>\n",
+       "      <td>65,001</td>\n",
+       "      <td>112,009</td>\n",
+       "      <td>96,117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>84654</td>\n",
+       "      <td>60657</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Cook</td>\n",
+       "      <td>2</td>\n",
+       "      <td>146700.0</td>\n",
+       "      <td>146500.0</td>\n",
+       "      <td>146300.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>318700</td>\n",
+       "      <td>320200.0</td>\n",
+       "      <td>321000</td>\n",
+       "      <td>322200</td>\n",
+       "      <td>323800</td>\n",
+       "      <td>325900</td>\n",
+       "      <td>327700</td>\n",
+       "      <td>78,623</td>\n",
+       "      <td>109,447</td>\n",
+       "      <td>65,996</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>84616</td>\n",
+       "      <td>60614</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Cook</td>\n",
+       "      <td>3</td>\n",
+       "      <td>198000.0</td>\n",
+       "      <td>195500.0</td>\n",
+       "      <td>194200.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>414000</td>\n",
+       "      <td>417800.0</td>\n",
+       "      <td>417700</td>\n",
+       "      <td>418700</td>\n",
+       "      <td>414100</td>\n",
+       "      <td>405400</td>\n",
+       "      <td>401900</td>\n",
+       "      <td>89,741</td>\n",
+       "      <td>143,293</td>\n",
+       "      <td>66,617</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>93144</td>\n",
+       "      <td>79936</td>\n",
+       "      <td>El Paso</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>El Paso</td>\n",
+       "      <td>El Paso</td>\n",
+       "      <td>4</td>\n",
+       "      <td>70800.0</td>\n",
+       "      <td>71000.0</td>\n",
+       "      <td>71000.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>114100</td>\n",
+       "      <td>114500.0</td>\n",
+       "      <td>114900</td>\n",
+       "      <td>115000</td>\n",
+       "      <td>114700</td>\n",
+       "      <td>114700</td>\n",
+       "      <td>114800</td>\n",
+       "      <td>50,133</td>\n",
+       "      <td>58,748</td>\n",
+       "      <td>111,086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>84640</td>\n",
+       "      <td>60640</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>Chicago</td>\n",
+       "      <td>Cook</td>\n",
+       "      <td>5</td>\n",
+       "      <td>102300.0</td>\n",
+       "      <td>101300.0</td>\n",
+       "      <td>100700.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>200100</td>\n",
+       "      <td>201500.0</td>\n",
+       "      <td>203200</td>\n",
+       "      <td>205200</td>\n",
+       "      <td>206700</td>\n",
+       "      <td>206600</td>\n",
+       "      <td>205700</td>\n",
+       "      <td>43,975</td>\n",
+       "      <td>63,299</td>\n",
+       "      <td>65,790</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>91733</td>\n",
+       "      <td>77084</td>\n",
+       "      <td>Houston</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Houston</td>\n",
+       "      <td>Harris</td>\n",
+       "      <td>6</td>\n",
+       "      <td>75600.0</td>\n",
+       "      <td>75400.0</td>\n",
+       "      <td>75100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>160600</td>\n",
+       "      <td>159100.0</td>\n",
+       "      <td>156900</td>\n",
+       "      <td>154600</td>\n",
+       "      <td>153400</td>\n",
+       "      <td>154100</td>\n",
+       "      <td>156200</td>\n",
+       "      <td>63,108</td>\n",
+       "      <td>74,105</td>\n",
+       "      <td>95,137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>97564</td>\n",
+       "      <td>94109</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>7</td>\n",
+       "      <td>298200.0</td>\n",
+       "      <td>295700.0</td>\n",
+       "      <td>296400.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1117800</td>\n",
+       "      <td>1125600.0</td>\n",
+       "      <td>1127700</td>\n",
+       "      <td>1128600</td>\n",
+       "      <td>1132000</td>\n",
+       "      <td>1138300</td>\n",
+       "      <td>1144000</td>\n",
+       "      <td>59,205</td>\n",
+       "      <td>86,481</td>\n",
+       "      <td>55,984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>90668</td>\n",
+       "      <td>75070</td>\n",
+       "      <td>McKinney</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Dallas-Fort Worth</td>\n",
+       "      <td>Collin</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>303400</td>\n",
+       "      <td>304700.0</td>\n",
+       "      <td>305500</td>\n",
+       "      <td>307300</td>\n",
+       "      <td>309700</td>\n",
+       "      <td>312000</td>\n",
+       "      <td>313700</td>\n",
+       "      <td>98,299</td>\n",
+       "      <td>110,899</td>\n",
+       "      <td>74,734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>62037</td>\n",
+       "      <td>11226</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>New York</td>\n",
+       "      <td>Kings</td>\n",
+       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>605800</td>\n",
+       "      <td>612600.0</td>\n",
+       "      <td>613200</td>\n",
+       "      <td>617000</td>\n",
+       "      <td>628700</td>\n",
+       "      <td>643100</td>\n",
+       "      <td>653400</td>\n",
+       "      <td>38,763</td>\n",
+       "      <td>49,673</td>\n",
+       "      <td>106,461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>91940</td>\n",
+       "      <td>77449</td>\n",
+       "      <td>Cypress</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>Houston</td>\n",
+       "      <td>Harris</td>\n",
+       "      <td>10</td>\n",
+       "      <td>72100.0</td>\n",
+       "      <td>72300.0</td>\n",
+       "      <td>72100.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>162700</td>\n",
+       "      <td>161500.0</td>\n",
+       "      <td>159100</td>\n",
+       "      <td>156300</td>\n",
+       "      <td>155100</td>\n",
+       "      <td>156400</td>\n",
+       "      <td>158800</td>\n",
+       "      <td>61,155</td>\n",
+       "      <td>69,987</td>\n",
+       "      <td>94,382</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 264 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   RegionID  RegionName           City State              Metro  \\\n",
+       "0     61639       10025       New York    NY           New York   \n",
+       "1     84654       60657        Chicago    IL            Chicago   \n",
+       "2     84616       60614        Chicago    IL            Chicago   \n",
+       "3     93144       79936        El Paso    TX            El Paso   \n",
+       "4     84640       60640        Chicago    IL            Chicago   \n",
+       "5     91733       77084        Houston    TX            Houston   \n",
+       "6     97564       94109  San Francisco    CA      San Francisco   \n",
+       "7     90668       75070       McKinney    TX  Dallas-Fort Worth   \n",
+       "8     62037       11226       New York    NY           New York   \n",
+       "9     91940       77449        Cypress    TX            Houston   \n",
+       "\n",
+       "      CountyName  SizeRank   1996-04   1996-05   1996-06   ...     2016-11  \\\n",
+       "0       New York         1       NaN       NaN       NaN   ...     1147300   \n",
+       "1           Cook         2  146700.0  146500.0  146300.0   ...      318700   \n",
+       "2           Cook         3  198000.0  195500.0  194200.0   ...      414000   \n",
+       "3        El Paso         4   70800.0   71000.0   71000.0   ...      114100   \n",
+       "4           Cook         5  102300.0  101300.0  100700.0   ...      200100   \n",
+       "5         Harris         6   75600.0   75400.0   75100.0   ...      160600   \n",
+       "6  San Francisco         7  298200.0  295700.0  296400.0   ...     1117800   \n",
+       "7         Collin         8       NaN       NaN       NaN   ...      303400   \n",
+       "8          Kings         9       NaN       NaN       NaN   ...      605800   \n",
+       "9         Harris        10   72100.0   72300.0   72100.0   ...      162700   \n",
+       "\n",
+       "     2016-12  2017-01  2017-02  2017-03  2017-04  2017-05  MedianIncome  \\\n",
+       "0  1149800.0  1132700  1121400  1123000  1143700  1178700        65,001   \n",
+       "1   320200.0   321000   322200   323800   325900   327700        78,623   \n",
+       "2   417800.0   417700   418700   414100   405400   401900        89,741   \n",
+       "3   114500.0   114900   115000   114700   114700   114800        50,133   \n",
+       "4   201500.0   203200   205200   206700   206600   205700        43,975   \n",
+       "5   159100.0   156900   154600   153400   154100   156200        63,108   \n",
+       "6  1125600.0  1127700  1128600  1132000  1138300  1144000        59,205   \n",
+       "7   304700.0   305500   307300   309700   312000   313700        98,299   \n",
+       "8   612600.0   613200   617000   628700   643100   653400        38,763   \n",
+       "9   161500.0   159100   156300   155100   156400   158800        61,155   \n",
+       "\n",
+       "   MeanIncome      Pop  \n",
+       "0     112,009   96,117  \n",
+       "1     109,447   65,996  \n",
+       "2     143,293   66,617  \n",
+       "3      58,748  111,086  \n",
+       "4      63,299   65,790  \n",
+       "5      74,105   95,137  \n",
+       "6      86,481   55,984  \n",
+       "7     110,899   74,734  \n",
+       "8      49,673  106,461  \n",
+       "9      69,987   94,382  \n",
+       "\n",
+       "[10 rows x 264 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.merge(homes2, hhi, how='left', left_on='RegionName', right_on='RegionName')\n",
+    "df.head(10)"
    ]
   },
   {
@@ -1864,7 +2221,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#attempting to convert MeanIncome to numeric values\n",
